# kenyan-payroll-system

./: Procfile  RAILWAY_DEPLOYMENT.md  RENDER_DEPLOYMENT.md  commit_removal_3eecc9d.html  create_admin_trigger.html  create_superuser.py  login_fix_complete.html  payroll_calculator.html  pyproject.toml  render.yaml  requirements.txt  responsive_frontend_complete.html  run_september_payroll.py  start.sh  test_api.html  test_connection.html  test_login_fix.html
backend/: .env  BANKING_API_DOCUMENTATION.md  DATABASE_MODEL_OPTION.py  EMAIL_SETUP_GUIDE.md  GMAIL_SMTP_SETUP.md  banking_enhancement_plan.py  banking_enhancement_summary.py  bulk_generate_all_p9.py  check_admin_employee.py  check_database.py  check_p9_data.py  create_mssql_database.sql  db.sqlite3  demo_p9_system.py  diagnose_p9_admin.py  force_admin_reload.py  import_contact_inquiries.py  inactivity_test.html  kenyan_banking_reference.py  migrate_to_mssql.py  mssql_migration_guide.py  mssql_requirements.txt  mssql_settings_update.py  reset_superuser_password.py  show_database_structure.py  startup.py  test_admin_kra_pin.py  test_admin_setup.py  test_auth_simple.py  test_banking_api.py  test_banking_information.py  test_banking_models.py  test_borderless_totals.py  test_both_totals_compact.py  test_bulk_p9_current_year_default.py  test_compact_p9_layout.py  test_complete_p9_system.py  test_comprehensive.py  test_corrected_e2_calculation.py  test_current_year_config.py  (+33 more)
frontend/: package-lock.json
frontend_build/: asset-manifest.json  index.html
kenyan_payroll_system.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
(+57 files in other folders)
