[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kenyan-payroll-system"
version = "1.0.0"
description = "Kenya Payroll System with KRA Compliance"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.0.0",
    "gunicorn>=20.0.0",
]

[tool.setuptools]
py-modules = []